Added sonar jdk config

--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -85,15 +85,17 @@
 
     <properties>
         <java.version>11</java.version>
+        <!-- Sonar Properties Properties -->
+
         <sonar.organization>usdot-fhwa-stol</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        
-        <!-- JaCoCo Properties -->
-        <jacoco.version>0.8.8</jacoco.version>
+        <sonar.java.jdkHome>${env.JAVA_HOME_17_X64}</sonar.java.jdkHome>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-        <sonar.language>java</sonar.language>	    
+        <sonar.language>java</sonar.language>	  
+        <!-- JaCoCo Properties -->
+        <jacoco.version>0.8.8</jacoco.version>
         <mosaic.version>22.1-SNAPSHOT</mosaic.version>
         <parent.dir>.</parent.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
