--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3 # The setup-java action provides the functionality for GitHub Actions runners for Downloading and setting up a requested version of Java
         with:
+          # Last java version is default and set for JAVA_HOME
           java-version: |
             17
             8
@@ -20,7 +21,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
-        # TODO Update pom.xml to use java 17 and sonar-maven-plugin
+        # Build and package application using Java 8
+        # Run sonar plugin using Java 17
         run: |
           cd co-simulation
           export JAVA_HOME=$JAVA_HOME_8_X64
