Added carma cloud setting

--- a/co-simulation/fed/mosaic-carma-cloud/pom.xml
+++ b/co-simulation/fed/mosaic-carma-cloud/pom.xml
@@ -86,7 +86,7 @@
 
   <profiles>
         <profile>
-            <id>skip-infrastructure-tests</id>
+            <id>skip-carma-cloud-tests</id>
 
             <build>
                 <pluginManagement>
