revert the Town04 scenario back

--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04/scenario_config.json
@@ -34,8 +34,7 @@
         "sumo": true,
         "carla": true,
         "carma": true,
-        "infrastructure": true,
-        "carma-cloud": false
+        "infrastructure": true
         
     }
 }
