--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_cloud/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_cloud/scenario_config.json
@@ -34,7 +34,8 @@
         "sumo": true,
         "carla": true,
         "carma": true,
-        "infrastructure": true
+        "infrastructure": true,
+        "carma-cloud": true
         
     }
 }
