Fix CI workflows for release and remove lavida references

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -5,7 +5,8 @@ on:
       - "develop"
       - "master"
       - "release/*"
-      - "release/lavida"
+    tags:
+      - "carma-system-*"
 
 jobs:
   dockerhub:
