--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,8 @@ name: Docker build
 on:
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   docker:
     uses: usdot-fhwa-stol/actions/.github/workflows/docker.yml@main
+    with:
+      runner: ubuntu-latest-16-core
