--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -94,7 +94,7 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-        <sonar.language>java</sonar.language>	  
+        <sonar.language>java</sonar.language>
         <!-- JaCoCo Properties -->
         <jacoco.version>0.8.8</jacoco.version>
         <mosaic.version>22.1-SNAPSHOT</mosaic.version>
@@ -152,6 +152,16 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.locationtech.proj4j</groupId>
+                <artifactId>proj4j</artifactId>
+                <version>1.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.locationtech.proj4j</groupId>
+                <artifactId>proj4j-epsg</artifactId>
+                <version>1.3.0</version>
+            </dependency>
             <dependency>
                 <!-- PURPOSE: Logging -->
                 <groupId>ch.qos.logback</groupId>
