--- a/co-simulation/pom.xml
+++ b/co-simulation/pom.xml
@@ -485,6 +485,7 @@
                             <header>${parent.dir}/legal/templates/cosimulation-license-header-2021.txt</header>
                             <header>${parent.dir}/legal/templates/leidos-license-header-2022.txt</header>
                             <header>${parent.dir}/legal/templates/leidos-license-header-2023.txt</header>
+                            <header>${parent.dir}/legal/templates/leidos-license-header-2024.txt</header>
                         </validHeaders>
                         <headerDefinitions>
                         </headerDefinitions>
