--- a/carma_messenger_vehicle_plugin/src/resources/move_over_law_cfg.ini
+++ b/carma_messenger_vehicle_plugin/src/resources/move_over_law_cfg.ini
@@ -1,7 +1,7 @@
 [Settings]
 closure_uptrack:50
 closure_downtrack:50
-location:100, 200
-vehicleID:test1
+target_id:target1
+vehicle_id:test1
 min_gap:0
 advisory_speed_limit:10.0
