--- a/co-simulation/bundle/src/assembly/resources/scenarios/Tiergarten/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Tiergarten/scenario_config.json
@@ -32,6 +32,8 @@
         "omnetpp": false,
         "output": true,
         "sumo": true,
-        "infrastructure": true
+        "infrastructure": true,
+        "carma-messenger": true
     }
+
 }
