--- a/carma_messenger_vehicle_plugin/src/resources/move_over_law_cfg.ini
+++ b/carma_messenger_vehicle_plugin/src/resources/move_over_law_cfg.ini
@@ -5,5 +5,5 @@ target_id:target1
 min_gap:5
 advisory_speed_limit:10.0
 stop_route:stop1
-stop_pos:400
-start_lane:"4397063_21487174_26873453_1"
+stop_pos:298
+start_lane:-50_4
