--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_messenger/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_messenger/scenario_config.json
@@ -35,7 +35,7 @@
         "carla": true,
         "carma": true,
         "infrastructure": true,
-        "carma-cloud": true
-
+        "carma-cloud": true,
+        "carma-messenger": true
     }
 }
