--- a/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_messenger/scenario_config.json
+++ b/co-simulation/bundle/src/assembly/resources/scenarios/Town04_carma_messenger/scenario_config.json
@@ -21,7 +21,8 @@
             "csNet": "10.4.0.0",
             "serverNet": "10.5.0.0",
             "tmcNet": "10.6.0.0"
-        }
+        },
+        "georeference":"+proj=tmerc +lat_0=0 +lon_0=0 +k=1 +x_0=0 +y_0=0 +datum=WGS84 +units=m +no_defs"
     },
     "federates": {
         "application": true,
